--- a/user1.html
+++ b/user1.html
@@ -73,8 +73,8 @@
 
 <body>
     <header>
-        <h1>Stage 1: Build the Virtual Machines (VMs)</h1>
-        <p>This foundational stage sets up the virtual network infrastructure. Focus on creating isolated VMs to
+        <h1>Welcome User 1</h1>
+        <p>This foundational project sets up the virtual network infrastructure. Focus on creating isolated VMs to
             simulate users, server, authentication, and the gateway. Use a hypervisor like VirtualBox for hosting. CPU,
             RAM, and storage resources are allocated to each VM based on its role and anticipated workload. The network
             is configured such that all traffic must route through the gateway, which acts as a central router with 4
@@ -830,5 +830,6 @@ net.ipv6.conf.lo.disable_ipv6 = 1
         </ul>
     </div>
 </body>
+
 
 </html>
