--- a/user1.html
+++ b/user1.html
@@ -73,7 +73,7 @@
 
 <body>
     <header>
-        <h1>Welcome User 1</h1>
+        <h1>Zero Trust Architecture (ZTA)</h1>
         <p>This foundational project sets up the virtual network infrastructure. Focus on creating isolated VMs to
             simulate users, server, authentication, and the gateway. Use a hypervisor like VirtualBox for hosting. CPU,
             RAM, and storage resources are allocated to each VM based on its role and anticipated workload. The network
@@ -833,3 +833,4 @@ net.ipv6.conf.lo.disable_ipv6 = 1
 
 
 </html>
+
